--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Assets/
+    - Assets/Group 148.png
+    - Assets/image 89.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
