--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,13 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Assets/Frame 6418.png
-    - Assets/Rectangle 1521 (1).png
-    - Assets/Rectangle 12375 (1).png
-    - Assets/background_image.png
-    - Assets/Frame 6418.png
-    - Assets/Rectangle 1521 (1).png
-    - Assets/Rectangle 12376.png
+    - Assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
