--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_glow: ^0.3.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
