--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_glow: ^0.3.0
   email_validator: ^2.1.17
   carousel_slider: ^4.2.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
