--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   email_validator: ^2.1.17
   carousel_slider: ^4.2.1
   http: ^1.1.0
+  awesome_snackbar_content: ^0.1.3
+  firebase_core: ^2.18.0
 
 dev_dependencies:
   flutter_test:
