--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,15 @@ dependencies:
   carousel_slider: ^4.2.1
 
   image_picker: ^1.0.4
-  http: ^1.1.0
+  http: ^0.13.1
   awesome_snackbar_content: ^0.1.3
   firebase_core: ^2.18.0
   firebase_storage: ^11.3.0
   path: ^1.8.3
   shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
+  gallery_saver: ^2.3.2
+  loading_animation_widget: ^1.2.0+4
 
 
 dev_dependencies:
