--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,18 +49,22 @@ dependencies:
   path_provider: ^2.1.1
   gallery_saver: ^2.3.2
   loading_animation_widget: ^1.2.0+4
+  cached_network_image: ^3.3.0
+  url_launcher: ^6.1.14
+  google_fonts: ^4.0.4
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  flutter_launcher_icons: "^0.13.1"
   flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "Assets/icon/icon.png"
+  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
