--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_glow: ^0.3.0
-  email_validator: ^2.1.17
-  carousel_slider: ^4.2.1
+  email_validator: ^3.0.0
+  carousel_slider: ^5.0.0
 
   image_picker: ^1.0.4
   http: ^0.13.1
   awesome_snackbar_content: ^0.1.3
-  firebase_core: ^2.18.0
-  firebase_storage: ^11.3.0
+  firebase_core: ^3.5.0
+  firebase_storage: ^12.3.1
   path: ^1.8.3
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
@@ -57,8 +57,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.13.1"
-  flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.14.0
+  flutter_lints: ^4.0.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -79,7 +79,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Assets/
+    - Assets/event_logo.png
+    - Assets/event_poster.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
